# bowling_kata

./: CMakeLists.txt
src/: BowlingResult.cpp  BowlingResult.h  Frame.cpp  Frame.h  Round.cpp  Round.h
test/: testBowlingScore.cpp
